# FPVCopilotSky

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  PROJECT_STATUS.md  QUICKSTART-PROD.md  README.md  SYSTEM_CONFIGURATION.md  TESTS_SUMMARY.md  TEST_IMPACT_ANALYSIS.md  fpv  install.sh  preferences.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_runner.sh
app/: config.py  main.py
docs/: ARCHITECTURE_MODULAR.md  BOARD_PROVIDER_SYSTEM.md  CI_CD_STRATEGY.md  DEVELOPER_GUIDE.md  DNS_FIX_IMPLEMENTATION.md  FLIGHT_SESSION_IMPLEMENTATION.md  INDEX.md  INSTALLATION.md  MIGRATION_ROADMAP.md  MODEM_FEATURES.md  MODULAR_ARCHITECTURE_SUMMARY.md  NETWORK_IMPROVEMENTS.md  NETWORK_MANAGEMENT.md  NETWORK_QUICKSTART.md  PHASE2_COMPLETION.md  PHASE3_E2E_TESTING.md  PHASE4_PERFORMANCE_PROFILING.md  PRODUCTION.md  PROVIDER_IMPLEMENTATION_GUIDE.md  ROLLBACK.md  USER_GUIDE.md  VIDEO_STREAM_DISCOVERY.md  VPN_INTEGRATION.md
scripts/: README.md  configure-modem.sh  deploy.sh  dev.sh  fix-nginx.sh  install-production.sh  preflight-check.sh  rollback-network-improvements.sh  safe_commands.sh  setup-serial-ports.sh  setup-sudoers.sh  setup-system-sudoers.sh  setup-tailscale-sudoers.sh  status.sh  test-network-management.sh  test_network_features.sh
systemd/: fpvcopilot-sky.nginx  fpvcopilot-sky.service
tests/: README.md  conftest.py  performance_benchmarking.py  stress_testing.py  test_api_routes.py  test_api_status.py  test_config.py  test_e2e_workflows.py  test_experimental_routes.py  test_flight_session.py  test_gstreamer_service.py  test_integration.py  test_mavlink_api.py  test_mavlink_bridge.py  test_mavlink_service.py  test_modem_pool.py  test_network_cache.py  test_network_priority.py  test_network_services.py  test_opencv_service.py  test_performance_profiling.py  test_policy_routing.py  test_preferences.py  test_preferences_api.py  test_preferences_extended.py  test_router_api.py  test_streaming_modes.py  test_system_logs_cache.py  test_video_config_validation.py  test_video_pipeline.py  test_video_routes_validation.py  test_vpn_api.py  test_vpn_health_checker.py  (+5 more)
(+241 files in other folders)
